--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,12 @@
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "symfony/assetic-bundle": "^2.7.1",
+        "leafo/scssphp": "~0.6",
+        "patchwork/jsqueeze": "~1.0",
+        "twig/extensions": "~1.0",
+        "symfony/asset": "~2.8|3.0.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
