creation service init printer

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -38,3 +38,10 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+
+    app.printer_init:
+        class: AppBundle\Services\Printer
+        public: true
+        arguments:
+            - 0
+        
