--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "twig/extensions": "~1.0",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "coresphere/console-bundle": "~0.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
